--- a/src/ProjectOrigin.PedersenCommitment.Tests/ProjectOrigin.PedersenCommitment.Tests.csproj
+++ b/src/ProjectOrigin.PedersenCommitment.Tests/ProjectOrigin.PedersenCommitment.Tests.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ProjectOrigin.PedersenCommitment" Version="0.2.0-rc.13" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -19,4 +18,7 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../ProjectOrigin.PedersenCommitment/ProjectOrigin.PedersenCommitment.csproj" />
+  </ItemGroup>
 </Project>
