--- a/src/ProjectOrigin.PedersenCommitment/ProjectOrigin.PedersenCommitment.csproj
+++ b/src/ProjectOrigin.PedersenCommitment/ProjectOrigin.PedersenCommitment.csproj
@@ -1,26 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RustRootDirectory>../rust-ffi/</RustRootDirectory>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NativeOutputPath>../Native/target/$(Configuration.ToLowerInvariant())/</NativeOutputPath>
   </PropertyGroup>
 
-  <Target Name="CargoBuildDebug" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
-    <Exec Command="cargo build" WorkingDirectory="$(RustRootDirectory)"/>
-    <ItemGroup>
-      <None Include="$(RustRootDirectory)/target/**/debug/*rust_ffi.*" CopyToOutputDirectory="PreserveNewest" />
-    </ItemGroup>
-  </Target>
-
-  <Target Name="CargoBuildRelease" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)' == 'Release' ">
-    <Exec Command="cargo build --release --target aarch64-unknown-linux-gnu" WorkingDirectory="$(RustRootDirectory)" />
-    <Exec Command="cargo build --release --target x86_64-unknown-linux-gnu" WorkingDirectory="$(RustRootDirectory)" />
-    <Exec Command="cargo build --release --target x86_64-pc-windows-gnu" WorkingDirectory="$(RustRootDirectory)" />
-  </Target>
-
-  <ItemGroup Condition=" '$(Configuration)' == 'Release' ">
-    <None Include="$(RustRootDirectory)/target/aarch64-unknown-linux-gnu/release/librust_ffi.so" Pack="true" PackagePath="runtimes/linux-arm64/native" />
-    <None Include="$(RustRootDirectory)/target/x86_64-unknown-linux-gnu/release/librust_ffi.so" Pack="true" PackagePath="runtimes/linux-x64/native" />
-    <None Include="$(RustRootDirectory)/target/x86_64-pc-windows-gnu/release/rust_ffi.dll" Pack="true" PackagePath="runtimes/win-x64/native" />
+  <ItemGroup>
+    <ProjectReference Include="../Native/rust-ffi.rsproj" />
+    <!-- TODO: Add profiles for different cpus and targets -->
+    <None Condition="$([MSBuild]::IsOsPlatform('MacOS'))"
+      Include="$(NativeOutputPath)librust_ffi.dylib"
+      Pack="true"
+      PackagePath="runtimes/macos_aarch64/native"
+      CopyToOutputDirectory="PreserveNewest" />
+    <None Condition="$([MSBuild]::IsOsPlatform('Linux'))"
+      Include="$(NativeOutputPath)librust_ffi.so"
+      Pack="true"
+      PackagePath="runtimes/linux-x86_64/native"
+      CopyToOutputDirectory="PreserveNewest" />
+    <None Condition="$([MSBuild]::IsOsPlatform('Windows'))"
+      Include="$(NativeOutputPath)rust_ffi.dll"
+      Pack="true"
+      PackagePath="runtimes/win-x86_64/native"
+      CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
