--- a/src/ProjectOrigin.PedersenCommitment/ProjectOrigin.PedersenCommitment.csproj
+++ b/src/ProjectOrigin.PedersenCommitment/ProjectOrigin.PedersenCommitment.csproj
@@ -1,76 +1,67 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <NativeOutputPath>../Native/target/$(Configuration.ToLowerInvariant())/</NativeOutputPath>
+    <RuntimeIdentifiers>linux-x64;linux-arm64;win-x64;win-aarch64;osx-x64;osx-aarch64</RuntimeIdentifiers>
+    <TargetFramework>net7.0</TargetFramework>
 
-    <!-- TODO: Use these somehow-->
-    <MacOSOutputPath>../Native/target/x86_64-apple-darwin/$(Configuration.ToLowerInvariant())/</MacOSOutputPath>
-    <LinuxOutputPath>../Native/target/x86_64-unknown-linux-gnu/$(Configuration.ToLowerInvariant())/</LinuxOutputPath>
-    <WindowsOutputPath>../Native/target/x86_64-pc-windows-gnu/$(Configuration.ToLowerInvariant())/</WindowsOutputPath>
+    <NativeOutputPath>../Native/target/$(Configuration.ToLowerInvariant())/</NativeOutputPath>
+    <MacOSIntelOutput>../Native/target/x86_64-apple-darwin/$(Configuration.ToLowerInvariant())/librust_ffi.dylib</MacOSIntelOutput>
+    <MacOSARMOutput>../Native/target/aarch64-apple-darwin/$(Configuration.ToLowerInvariant())/librust_ffi.dylib</MacOSARMOutput>
+    <LinuxIntelOutput>../Native/target/x86_64-unknown-linux-gnu/$(Configuration.ToLowerInvariant())/librust_ffi.so</LinuxIntelOutput>
+    <LinuxARMOutput>../Native/target/aarch64-unknown-linux-gnu/$(Configuration.ToLowerInvariant())/librust_ffi.so</LinuxARMOutput>
+    <WindowsIntelOutput>../Native/target/x86_64-pc-windows-gnu/$(Configuration.ToLowerInvariant())/rust_ffi.dll</WindowsIntelOutput>
+    <WindowsARMOutput>../Native/target/aarch64-pc-windows-gnu/$(Configuration.ToLowerInvariant())/rust_ffi.dll</WindowsARMOutput>
   </PropertyGroup>
 
+
   <ItemGroup>
-    <ProjectReference Include="../Native/rust-ffi.rsproj"
-      ReferenceOutputAssembly="false"
-      />
+    <ProjectReference Include="../Native/rust-ffi.rsproj" />
 
-    <!-- TODO: Delete these? -->
-    <None Condition="$([MSBuild]::IsOsPlatform('MacOS'))"
-      Include="$(NativeOutputPath)librust_ffi.dylib"
+    <!-- These libraries are only included if found, so it is required to compile them first-->
+
+    <Content Condition="Exists($(MacOSIntelOutput))"
+      Include="$(MacOSIntelOutput)"
       Pack="true"
-      PackagePath="runtimes/$(RuntimeIdentifier)/native"
+      PackagePath="runtimes/osx-x64/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
-    <None Condition="$([MSBuild]::IsOsPlatform('Linux'))"
-      Include="$(NativeOutputPath)librust_ffi.so"
+    <Content Condition="Exists($(MacOSARMOutput))"
+      Include="$(MacOSARMOutput)"
       Pack="true"
-      PackagePath="runtimes/$(RuntimeIdentifier)/native"
+      PackagePath="runtimes/osx-arm64/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
-    <None Condition="$([MSBuild]::IsOsPlatform('Windows'))"
-      Include="$(NativeOutputPath)rust_ffi.dll"
+    <Content Condition="Exists($(LinuxIntelOutput))"
+      Include="$(LinuxIntelOutput)"
       Pack="true"
-      PackagePath="runtimes/$(RuntimeIdentifier)/native"
+      PackagePath="runtimes/linux-x64/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
-
-    <!-- Dependent on the output folder -->
-    <!-- TODO: Simplify this down -->
-    <None Condition="'$(RuntimeIdentifier)' == 'osx-x64'"
-      Include="../Native/target/x86_64-apple-darwin/$(Configuration.ToLowerInvariant())/librust_ffi.dylib"
+    <Content Condition="Exists($(LinuxARMOutput))"
+      Include="$(LinuxARMOutput)"
       Pack="true"
-      PackagePath="runtimes/osx-x64/native"
+      PackagePath="runtimes/linux-arm64/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
-    <None Condition="'$(RuntimeIdentifier)' == 'osx-arm64'"
-      Include="../Native/target/aarch64-apple-darwin/$(Configuration.ToLowerInvariant())/librust_ffi.dylib"
+    <Content Condition="Exists($(WindowsIntelOutput))"
+      Include="$(WindowsIntelOutput)"
       Pack="true"
-      PackagePath="runtimes/osx-arm64/native"
+      PackagePath="runtimes/win-x86/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
-    <None Condition="'$(RuntimeIdentifier)' == 'linux-x64'"
-      Include="../Native/target/x86_64-unknown-linux-gnu/$(Configuration.ToLowerInvariant())/librust_ffi.so"
+    <Content Condition="Exists($(WindowsARMOutput))"
+      Include="$(WindowsARMOutput)"
       Pack="true"
-      PackagePath="runtimes/linux-x64/native"
+      PackagePath="runtimes/win-arm64/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
-    <None Condition="'$(RuntimeIdentifier)' == 'linux-arm64'"
-      Include="../Native/target/aarch64-unknown-linux-gnu/$(Configuration.ToLowerInvariant())/librust_ffi.so"
+    <!-- Native for this machine -->
+    <Content Condition="Exists('../Native/target/$(Configuration.ToLowerInvariant())/*rust_ffi.*')"
+      Include="../Native/target/$(Configuration.ToLowerInvariant())/*rust_ffi.*"
       Pack="true"
-      PackagePath="runtimes/linux-arm64/native"
-      CopyToOutputDirectory="PreserveNewest" />
-
-    <None Condition="'$(RuntimeIdentifier)' == 'win-x86'"
-      Include="../Native/target/x86_64-pc-windows-gnu/$(Configuration.ToLowerInvariant())/rust_ffi.dll"
-      Pack="true"
-      PackagePath="runtimes/win-x86/native"
-      CopyToOutputDirectory="PreserveNewest" />
-
-    <None Condition="'$(RuntimeIdentifier)' == 'win-arm64'"
-      Include="../Native/target/aarch64-pc-windows-gnu/$(Configuration.ToLowerInvariant())/rust_ffi.dll"
-      Pack="true"
-      PackagePath="runtimes/win-arm64/native"
+      PackagePath="runtimes/any/native/"
       CopyToOutputDirectory="PreserveNewest" />
 
   </ItemGroup>
+
 </Project>
