Updated release workflow to match other projects Added aditional targets (mac and windows) Minor cleanup Added CONTRIBUTING.md

--- a/.github/workflows/pullrequest-verify.yml
+++ b/.github/workflows/pullrequest-verify.yml
@@ -28,3 +28,9 @@ jobs:
 
       - name: Verify formatting
         run: make lint
+
+  build-nuget-package:
+    uses: ./.github/workflows/reusable-build-nuget-package.yaml
+    with:
+      version: 0.0.1
+      configuration: Release
