--- a/src/ProjectOrigin.PedersenCommitment/Directory.Build.props
+++ b/src/ProjectOrigin.PedersenCommitment/Directory.Build.props
@@ -4,6 +4,6 @@
   <PropertyGroup>
     <!-- it is required to seet the TargetFramework to nothing to allow to set TargetFrameworks -->
     <TargetFramework />
-    <TargetFrameworks>net7.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
   </PropertyGroup>
 </Project>
