--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,11 +18,7 @@
                 "EditorConfig.EditorConfig",
                 "ms-dotnettools.csharp",
                 "formulahendry.dotnet-test-explorer",
-                "ryanluker.vscode-coverage-gutters",
-                "DotJoshJohnson.xml",
-                "zxh404.vscode-proto3",
-                "bierner.markdown-footnotes",
-                "bierner.markdown-mermaid"
+                "DotJoshJohnson.xml"
             ],
             "settings": {
                 "editor.formatOnSave": true
