--- a/.github/workflows/sonarcloud.yaml
+++ b/.github/workflows/sonarcloud.yaml
@@ -11,36 +11,24 @@ on:
 jobs:
   build:
     name: sonar-analysis
-    runs-on: ubuntu-latest
-    env:
-      ORGANIZATION: "project-origin"
-      SOLUTION_NAME: "project-origin_pedersen-commitment"
-      SOLUTION_FOLDER: "src"
-
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: "microsoft"
           java-version: "17"
 
-      - name: Setup .NET Core SDK 7
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: "7.0.203"
+      - name: Setup .NET Core SDK from global.json
+        uses: actions/setup-dotnet@v4
 
       - name: Restore
         shell: bash
         run: |
           make restore
-
-      - name: Build rust code
-        shell: bash
-        run: |
-          make build-rust
 
       - name: Install dotnet-sonarscanner
         shell: bash
@@ -58,7 +46,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: bash
         run: |
-          dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.token="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
-          dotnet build --no-incremental ${{ env.SOLUTION_FOLDER }}
-          dotnet-coverage collect "dotnet test ${{ env.SOLUTION_FOLDER }}" -f xml -o "coverage.xml"
+          dotnet sonarscanner begin -k:"${{ vars.SONAR_PROJECTKEY }}" -o:"${{ vars.SONAR_ORGANIZATION }}" -d:sonar.token="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
+          dotnet build --no-incremental src
+          dotnet-coverage collect 'make test' -f xml -o "coverage.xml"
           dotnet sonarscanner end -d:sonar.token="${{ secrets.SONAR_TOKEN }}"
