Update workflows and Makefile

--- a/.github/workflows/release-published.yaml
+++ b/.github/workflows/release-published.yaml
@@ -21,18 +21,6 @@ jobs:
       configuration: Release
 
   publish-nuget-package:
-    name: Publish nuget package
-    runs-on: ubuntu-22.04
     needs:
       - build-nuget-package
-    env:
-      nuget_path: nuget-packages
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: ${{ env.nuget_path }}
-
-      - name: Publish
-        shell: bash
-        run: dotnet nuget push ${{ env.nuget_path }}/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    uses: project-origin/.github/.github/workflows/reusable-publish-nuget-artifacts.yaml@main
