--- a/.github/workflows/pullrequest-verify.yaml
+++ b/.github/workflows/pullrequest-verify.yaml
@@ -7,13 +7,13 @@ on:
 
 jobs:
   verify-devcontainer:
-    uses: project-origin/.github/.github/workflows/reusable-verify-devcontainer.yaml@main
+    uses: project-origin/.github/.github/workflows/reusable-verify-devcontainer.yaml@55a29b1e276fb18a86de91abe66d3a97e68a78cd
 
   verify-code:
-    uses: project-origin/.github/.github/workflows/reusable-verify-code.yaml@main
+    uses: project-origin/.github/.github/workflows/reusable-verify-code.yaml@55a29b1e276fb18a86de91abe66d3a97e68a78cd
 
   verify-renovate:
-    uses: project-origin/.github/.github/workflows/reusable-verify-renovate.yaml@main
+    uses: project-origin/.github/.github/workflows/reusable-verify-renovate.yaml@55a29b1e276fb18a86de91abe66d3a97e68a78cd
 
   verify-build-nuget:
     uses: ./.github/workflows/reusable-build-nuget-package.yaml
