--- a/.github/workflows/release-published.yaml
+++ b/.github/workflows/release-published.yaml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   define-version:
-    uses: project-origin/.github/.github/workflows/reusable-tag-version.yaml@main
+    uses: project-origin/.github/.github/workflows/reusable-tag-version.yaml@55a29b1e276fb18a86de91abe66d3a97e68a78cd
 
   build-nuget-package:
     needs:
@@ -23,4 +23,4 @@ jobs:
   publish-nuget-package:
     needs:
       - build-nuget-package
-    uses: project-origin/.github/.github/workflows/reusable-publish-nuget-artifacts.yaml@main
+    uses: project-origin/.github/.github/workflows/reusable-publish-nuget-artifacts.yaml@55a29b1e276fb18a86de91abe66d3a97e68a78cd
