--- a/src/Native/Cargo.toml
+++ b/src/Native/Cargo.toml
@@ -8,8 +8,8 @@ crate-type = ['cdylib']
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bulletproofs = "4.0.0"
-curve25519-dalek-ng = "4.1.1"
+bulletproofs = { git = "https://github.com/zkcrypto/bulletproofs" }
+curve25519-dalek-ng = { version = "4.1.2", package = "curve25519-dalek", features = ["digest", "rand_core"] }
 merlin = "3.0.0"
 rand = "0.8.5"
 sha3 = "0.10"
