lock-fluentassertions-to-710

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,9 @@
 {
-    "extends": ["github>project-origin/.github:renovate-defaults.json"]
+    "extends": ["github>project-origin/.github:renovate-defaults.json"],
+    "packageRules": [
+        {
+            "matchPackageNames": ["FluentAssertions"],
+            "allowedVersions": "<=7.1.0"
+        }
+    ]
 }
